# AVS_labs

Lab1/: CMakeLists.txt  main.cpp
Lab2/: CMakeLists.txt  main.cpp
Lab2/task1/: atomic_executor.h  blocking_executor.h
Lab2/task2/: mutex_queue.h  queue.h
Lab3/: main.cpp
